# FRCDriverDashboard

./: .gitignore  README.md  package.json
.github/workflows/: tauri.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/routes/: +page.svelte
